# model-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml  train-release.yml
output/: misclassified_msgs.txt  model.joblib
src/: config.py  read_data.py  serve_model.py  text_classification.py  text_preprocessing.py
